
AC_PREREQ([2.61])

AC_INIT([port-bridge],[1.0.0])

AM_INIT_AUTOMAKE([-Werror -Wall gnu foreign])

AM_MAINTAINER_MODE

AC_CONFIG_HEADER([config.h])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_CPP
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_LN_S
AC_PROG_INSTALL

AC_OUTPUT([ \
	Makefile \
])

